
In this files, you will find changes between java OMiSCID versions.

*must: solve the castor proliferation problem
*should: do not query full description before needed
*could: add an heuristic on whether avahi registration will be accepted based on the size of the properties
*could: dnssd client auto connect/reconnect
*could: dnssd client has a list of expected servers

1.0.4
r
        fix:  default "class" variable value is now "Service" as intended
        fix:  getting a remote variable now properly ask the remote service (wrong caching policy)
        fix:  service xml description now uses proper castor version
        fix:  added a try catch around listener callbacks (was trusting listeners) (connector and variable listeners)
        fix:  listener added before connectTo are now properly listening
        impr: sensible performance improvement on high bandwidth message receptions
        impr: have different options to access dnssd (mdnsResponder, avahi, jmdns, custom proxy for lightweight devices)
        impr: added a default factory that smartly uses available dnssd provider (avahi then mdns then jmdns)
        impr: allows dnssd browser sharing to improve performance of applications using multiple browsers
        impr: cleaner affectation of peer id for searchs and connections before .start()
        impr: in order to handle mDNSResponder vs avahi daemons conflict happening on some configurations, the possible trailing "-2" on the hostname is removed when needed

1.0.3
r1700
        fix:  added some fallback behaviours to avoid exception when really old services are present
        impr: made IncorrectConnectorType a RuntimeException

1.0.2
r1614
2006-10-26
        fix:  implemented properly the sendToOneClient using a ServiceProxy
        impr: performance improvement for introspection connections
        fix:  added missing stream closing causing problems with numerous variable change notification
        impr: made some exceptions RuntimeException